--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -28,12 +28,34 @@ body {
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    font-size: 0.9em;
 }
 .legend p {
     font-family: monospace, monospace;
     white-space: pre;
     margin: 0.3em;
 }
+
+#lightbox-overlay {
+  position: fixed;
+  display: none;
+  top: 0; left: 0; width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center; align-items: center;
+  z-index: 1000;
+}
+#lightbox-img {
+  max-width: 90%;
+  max-height: 90%;
+}
+#close-btn {
+  position: absolute;
+  top: 20px; right: 30px;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+}
+
 footer {
     margin-top: 20px;
     padding: 5px;
